package ucf.assignment;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;

import java.awt.*;

public class CalculatorController {
    @FXML
    private TextField resultDisplay;

    @FXML
    public void oneButtonClicked(ActionEvent actionEvent) {
        append1();
    }

    @FXML
    public void twoButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void threeButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void addButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void fourButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void fiveButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void sixButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void subButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void sevenButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void eightButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void nineButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void multiButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void zeroButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void divButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void enterButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void deciButtonClicked(ActionEvent actionEvent) {
    }

    @FXML
    public void clearButtonClicked(ActionEvent actionEvent) {
        clearDisplay();
    }

    public void clearDisplay() {
        // set the value of resultDisplay to ""
    }

    public void append1() {
        // append a "1" to the current value of the resultDisplay
    }
}
